# finely

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
api/: .env.dev  .gitignore  Dockerfile  README.md  TODO.MD  docker-compose.yml  entrypoint.migrate.sh  entrypoint.sh  pyproject.toml
api/app/: asgi.py  urls.py  wsgi.py
api/app/settings/: base.py  dev.py  prod.py
api/pft/: admin.py  apps.py  models.py  routers.py  serializers.py  signals.py  urls.py  views.py
api/pft/migrations/: 0001_initial.py  0002_subscriptionplan_analyticsreport_billreminder_and_more.py
landing/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/mislaka-analyzer/: page.tsx
landing/app/style-guide/: page.tsx
landing/components/: faq-accordion.tsx  feature-card.tsx  pricing-card.tsx  testimonial-card.tsx
landing/components/mislaka/: README.md  pension-chart.tsx  pension-details.tsx  pension-summary.tsx
landing/lib/mislaka/: ai-service.ts  parser.ts
web/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  components.json  eslint.config.js  index.html  nginx.conf  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
web/app/: app.tsx  main.tsx
web/app/client/: httpPFTClient.ts
web/app/components/: add-transaction-dialog.tsx  budget-progress.tsx  command-menu.tsx  dashboard-layout.tsx  date-range-picker.tsx  delete-transaction-alert.tsx  overview.tsx  (+6 more)
web/schema/: pft.yaml
(+21 files in other folders)
